# dispel

./: README.md  dispel.py  requirements.txt  setup.cfg
dispel/: __init__.py  main.py  vectorize.py
tests/: test_dispel.py
tests/fixtures/: test_sents.conll
