[metadata]
name = dispel
version = 0.0.1
description = Obtain word embeddings from transformer models
license = MIT
author = Loïc Grobol
author_email = loic.grobol@gmail.com
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Environment :: Console
keywords =
    nlp
    transformers
    language-model


[options]
packages = find:
include_package_data=True
python_requires = >=3.7
install_requires =
    click
    click_pathlib
    more_itertools
    tokenizers
    torch
    tqdm
    transformers

[options.entry_points]
console_scripts =
    dispel = dispel.main:main

[flake8]
max-line-length = 100
ignore = E203,E266,E501,W503
max-complexity = 18

[mypy]
allow_redefinition = True
warn_unreachable = True
